fixed div in contact-info class and created class for div inside it to display it inline and bring up and align all the text to the left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,3 +239,16 @@ section {
     color: #fce138;
 }
 
+.contact-info iframe { /* or we can just use iframe (type selector is potentially dangerous choice due to possible side effects) for this project cause we don't have another iframe to worry about. We used a class selector */
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
